// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile should render 1`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-2"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-106"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-106"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-106"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Mobile Phone Number
                 
              </h1>
              <div>
                <div
                  class="makeStyles-phoneInput-109 undefined  react-tel-input"
                >
                  <div
                    class="special-label"
                  >
                    Phone
                  </div>
                  <input
                    autocomplete="off"
                    class=" form-control"
                    data-testid="mobile-user-phone"
                    name="mobilePhoneNumber"
                    placeholder="+0 (000) 000-0000"
                    type="text"
                    value="+54 (87) 1093"
                    variant="outlined"
                  />
                  <div
                    class=" flag-dropdown"
                  >
                    <div
                      aria-haspopup="listbox"
                      class="selected-flag"
                      role="button"
                      tabindex="-1"
                      title="Argentina: + 54"
                    >
                      <div
                        class="flag ar"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 MuiGrid-grid-lg-9"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1 makeStyles-middleInput-39"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Office Phone Number (Optional)
                   
                </h1>
                <div>
                  <div
                    class="makeStyles-phoneInput-109 undefined  react-tel-input"
                  >
                    <div
                      class="special-label"
                    >
                      Phone
                    </div>
                    <input
                      autocomplete="off"
                      class=" form-control"
                      data-testid="office-user-phone"
                      id="officePhoneNumber"
                      name="officePhoneNumber"
                      placeholder="+0 (000) 000-0000"
                      type="text"
                      value="+43 781 983"
                      variant="outlined"
                    />
                    <div
                      class=" flag-dropdown"
                    >
                      <div
                        aria-haspopup="listbox"
                        class="selected-flag"
                        role="button"
                        tabindex="-1"
                        title="Austria: + 43"
                      >
                        <div
                          class="flag at"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-lg-3"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-103 makeStyles-inputBottomPadding-1"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Ext
                   
                </h1>
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        data-testid="office-user-phone"
                        maxlength="6"
                        name="officePhoneExtension"
                        placeholder="Ext"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-105 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-106"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-5"
          >
            <div
              class=" makeStyles-controlledRadioContainer-113 controlledRadioContainer"
              data-testid="controlled-radio"
            >
              <fieldset
                class="MuiFormControl-root makeStyles-radioWrapper-55"
              >
                <legend
                  class="MuiFormLabel-root makeStyles-controlledRadioLabel-112"
                  id="radio-label-preferredContactMethod"
                >
                  Preferred Contact Method
                </legend>
                <div
                  aria-labelledby="radio-label-preferredContactMethod"
                  class="MuiFormGroup-root MuiFormGroup-row"
                  data-testid="controlled-radio-group"
                  role="radiogroup"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-120 MuiRadio-root makeStyles-root-114 PrivateSwitchBase-checked-121 Mui-checked"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          checked=""
                          class="PrivateSwitchBase-input-123"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="0"
                        />
                        <span
                          class="makeStyles-icon-115 makeStyles-checkedIcon-118 "
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Email
                    </span>
                  </label>
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-120 MuiRadio-root makeStyles-root-114"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-123"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="1"
                        />
                        <span
                          class="makeStyles-icon-115 makeStyles-unactiveIcon-117"
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Phone
                    </span>
                  </label>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-3"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-27 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-26 makeStyles-noPadding-23 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-126"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should render 2`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-128"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-131"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-229 makeStyles-inputBottomPadding-127"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-231 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-232"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-131"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-229 makeStyles-inputBottomPadding-127"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-231 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-232"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-131"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-229 makeStyles-inputBottomPadding-127"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-231 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-232"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-131"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-229 makeStyles-inputBottomPadding-127"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Mobile Phone Number
                 
              </h1>
              <div>
                <div
                  class="makeStyles-phoneInput-235 undefined  react-tel-input"
                >
                  <div
                    class="special-label"
                  >
                    Phone
                  </div>
                  <input
                    autocomplete="off"
                    class=" form-control"
                    data-testid="mobile-user-phone"
                    name="mobilePhoneNumber"
                    placeholder="+0 (000) 000-0000"
                    type="text"
                    value="+54 (87) 1093"
                    variant="outlined"
                  />
                  <div
                    class=" flag-dropdown"
                  >
                    <div
                      aria-haspopup="listbox"
                      class="selected-flag"
                      role="button"
                      tabindex="-1"
                      title="Argentina: + 54"
                    >
                      <div
                        class="flag ar"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 MuiGrid-grid-lg-9"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-229 makeStyles-inputBottomPadding-127 makeStyles-middleInput-165"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Office Phone Number (Optional)
                   
                </h1>
                <div>
                  <div
                    class="makeStyles-phoneInput-235 undefined  react-tel-input"
                  >
                    <div
                      class="special-label"
                    >
                      Phone
                    </div>
                    <input
                      autocomplete="off"
                      class=" form-control"
                      data-testid="office-user-phone"
                      id="officePhoneNumber"
                      name="officePhoneNumber"
                      placeholder="+0 (000) 000-0000"
                      type="text"
                      value="+43 781 983"
                      variant="outlined"
                    />
                    <div
                      class=" flag-dropdown"
                    >
                      <div
                        aria-haspopup="listbox"
                        class="selected-flag"
                        role="button"
                        tabindex="-1"
                        title="Austria: + 43"
                      >
                        <div
                          class="flag at"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-lg-3"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-229 makeStyles-inputBottomPadding-127"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Ext
                   
                </h1>
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        data-testid="office-user-phone"
                        maxlength="6"
                        name="officePhoneExtension"
                        placeholder="Ext"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-231 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-232"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-131"
          >
            <div
              class=" makeStyles-controlledRadioContainer-239 controlledRadioContainer"
              data-testid="controlled-radio"
            >
              <fieldset
                class="MuiFormControl-root makeStyles-radioWrapper-181"
              >
                <legend
                  class="MuiFormLabel-root makeStyles-controlledRadioLabel-238"
                  id="radio-label-preferredContactMethod"
                >
                  Preferred Contact Method
                </legend>
                <div
                  aria-labelledby="radio-label-preferredContactMethod"
                  class="MuiFormGroup-root MuiFormGroup-row"
                  data-testid="controlled-radio-group"
                  role="radiogroup"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-246 MuiRadio-root makeStyles-root-240 PrivateSwitchBase-checked-247 Mui-checked"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          checked=""
                          class="PrivateSwitchBase-input-249"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="0"
                        />
                        <span
                          class="makeStyles-icon-241 makeStyles-checkedIcon-244 "
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Email
                    </span>
                  </label>
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-246 MuiRadio-root makeStyles-root-240"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-249"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="1"
                        />
                        <span
                          class="makeStyles-icon-241 makeStyles-unactiveIcon-243"
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Phone
                    </span>
                  </label>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-129"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-153 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-152 makeStyles-noPadding-149 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-252"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should show validations 1`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-254"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-257"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-355 makeStyles-inputBottomPadding-253"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-357 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-358"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-257"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-355 makeStyles-inputBottomPadding-253"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-357 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-358"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-257"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-355 makeStyles-inputBottomPadding-253"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-357 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-358"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-257"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-355 makeStyles-inputBottomPadding-253"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Mobile Phone Number
                 
              </h1>
              <div>
                <div
                  class="makeStyles-phoneInput-361 undefined  react-tel-input"
                >
                  <div
                    class="special-label"
                  >
                    Phone
                  </div>
                  <input
                    autocomplete="off"
                    class=" form-control"
                    data-testid="mobile-user-phone"
                    name="mobilePhoneNumber"
                    placeholder="+0 (000) 000-0000"
                    type="text"
                    value="+54 (87) 1093"
                    variant="outlined"
                  />
                  <div
                    class=" flag-dropdown"
                  >
                    <div
                      aria-haspopup="listbox"
                      class="selected-flag"
                      role="button"
                      tabindex="-1"
                      title="Argentina: + 54"
                    >
                      <div
                        class="flag ar"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 MuiGrid-grid-lg-9"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-355 makeStyles-inputBottomPadding-253 makeStyles-middleInput-291"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Office Phone Number (Optional)
                   
                </h1>
                <div>
                  <div
                    class="makeStyles-phoneInput-361 undefined  react-tel-input"
                  >
                    <div
                      class="special-label"
                    >
                      Phone
                    </div>
                    <input
                      autocomplete="off"
                      class=" form-control"
                      data-testid="office-user-phone"
                      id="officePhoneNumber"
                      name="officePhoneNumber"
                      placeholder="+0 (000) 000-0000"
                      type="text"
                      value="+43 781 983"
                      variant="outlined"
                    />
                    <div
                      class=" flag-dropdown"
                    >
                      <div
                        aria-haspopup="listbox"
                        class="selected-flag"
                        role="button"
                        tabindex="-1"
                        title="Austria: + 43"
                      >
                        <div
                          class="flag at"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-lg-3"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-355 makeStyles-inputBottomPadding-253"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Ext
                   
                </h1>
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        data-testid="office-user-phone"
                        maxlength="6"
                        name="officePhoneExtension"
                        placeholder="Ext"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-357 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-358"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-257"
          >
            <div
              class=" makeStyles-controlledRadioContainer-365 controlledRadioContainer"
              data-testid="controlled-radio"
            >
              <fieldset
                class="MuiFormControl-root makeStyles-radioWrapper-307"
              >
                <legend
                  class="MuiFormLabel-root makeStyles-controlledRadioLabel-364"
                  id="radio-label-preferredContactMethod"
                >
                  Preferred Contact Method
                </legend>
                <div
                  aria-labelledby="radio-label-preferredContactMethod"
                  class="MuiFormGroup-root MuiFormGroup-row"
                  data-testid="controlled-radio-group"
                  role="radiogroup"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-372 MuiRadio-root makeStyles-root-366 PrivateSwitchBase-checked-373 Mui-checked"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          checked=""
                          class="PrivateSwitchBase-input-375"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="0"
                        />
                        <span
                          class="makeStyles-icon-367 makeStyles-checkedIcon-370 "
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Email
                    </span>
                  </label>
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-372 MuiRadio-root makeStyles-root-366"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-375"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="1"
                        />
                        <span
                          class="makeStyles-icon-367 makeStyles-unactiveIcon-369"
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Phone
                    </span>
                  </label>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-255"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-279 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-278 makeStyles-noPadding-275 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-378"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;

exports[`Profile should show validations for first name 1`] = `
<body>
  <div>
    <div
      class="makeStyles-profileFormPaddingTop-380"
    >
      <div
        class="MuiGrid-root MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-12"
        >
          <div
            class="makeStyles-errorInputWrapper-383"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-481 makeStyles-inputBottomPadding-379"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                First Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-first-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-first-name"
                      name="firstName"
                      placeholder="First Name"
                      required=""
                      type="text"
                      value="account name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-483 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-484"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-383"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-481 makeStyles-inputBottomPadding-379"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Last Name
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-last-name-wrapper"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input"
                      data-testid="profile-last-name"
                      name="lastName"
                      placeholder="Last Name"
                      type="text"
                      value="account last name"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-483 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-484"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-383"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-481 makeStyles-inputBottomPadding-379"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Email
                 
              </h1>
              <div>
                <div
                  class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  data-testid="profile-email"
                >
                  <div
                    class="MuiInputBase-root MuiOutlinedInput-root Mui-disabled Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl"
                  >
                    <input
                      aria-invalid="false"
                      autocomplete="off"
                      class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled Mui-disabled"
                      data-testid="email"
                      disabled=""
                      name="email"
                      placeholder="Email"
                      type="text"
                      value="email@test.com"
                    />
                    <fieldset
                      aria-hidden="true"
                      class="PrivateNotchedOutline-root-483 MuiOutlinedInput-notchedOutline"
                      style="padding-left: 8px;"
                    >
                      <legend
                        class="PrivateNotchedOutline-legend-484"
                        style="width: 0.01px;"
                      >
                        <span>
                          ​
                        </span>
                      </legend>
                    </fieldset>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-383"
          >
            <div
              class="MuiFormControl-root makeStyles-formControl-481 makeStyles-inputBottomPadding-379"
            >
              <h1
                class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
              >
                Mobile Phone Number
                 
              </h1>
              <div>
                <div
                  class="makeStyles-phoneInput-487 undefined  react-tel-input"
                >
                  <div
                    class="special-label"
                  >
                    Phone
                  </div>
                  <input
                    autocomplete="off"
                    class=" form-control"
                    data-testid="mobile-user-phone"
                    name="mobilePhoneNumber"
                    placeholder="+0 (000) 000-0000"
                    type="text"
                    value="+54 (87) 1093"
                    variant="outlined"
                  />
                  <div
                    class=" flag-dropdown"
                  >
                    <div
                      aria-haspopup="listbox"
                      class="selected-flag"
                      role="button"
                      tabindex="-1"
                      title="Argentina: + 54"
                    >
                      <div
                        class="flag ar"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 MuiGrid-grid-lg-9"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-481 makeStyles-inputBottomPadding-379 makeStyles-middleInput-417"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Office Phone Number (Optional)
                   
                </h1>
                <div>
                  <div
                    class="makeStyles-phoneInput-487 undefined  react-tel-input"
                  >
                    <div
                      class="special-label"
                    >
                      Phone
                    </div>
                    <input
                      autocomplete="off"
                      class=" form-control"
                      data-testid="office-user-phone"
                      id="officePhoneNumber"
                      name="officePhoneNumber"
                      placeholder="+0 (000) 000-0000"
                      type="text"
                      value="+43 781 983"
                      variant="outlined"
                    />
                    <div
                      class=" flag-dropdown"
                    >
                      <div
                        aria-haspopup="listbox"
                        class="selected-flag"
                        role="button"
                        tabindex="-1"
                        title="Austria: + 43"
                      >
                        <div
                          class="flag at"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 MuiGrid-grid-lg-3"
            >
              <div
                class="MuiFormControl-root makeStyles-formControl-481 makeStyles-inputBottomPadding-379"
              >
                <h1
                  class="MuiTypography-root MuiTypography-caption MuiTypography-colorSecondary MuiTypography-alignLeft"
                >
                  Ext
                   
                </h1>
                <div>
                  <div
                    class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                    >
                      <input
                        aria-invalid="false"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input"
                        data-testid="office-user-phone"
                        maxlength="6"
                        name="officePhoneExtension"
                        placeholder="Ext"
                        type="text"
                        value=""
                      />
                      <fieldset
                        aria-hidden="true"
                        class="PrivateNotchedOutline-root-483 MuiOutlinedInput-notchedOutline"
                        style="padding-left: 8px;"
                      >
                        <legend
                          class="PrivateNotchedOutline-legend-484"
                          style="width: 0.01px;"
                        >
                          <span>
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="makeStyles-errorInputWrapper-383"
          >
            <div
              class=" makeStyles-controlledRadioContainer-491 controlledRadioContainer"
              data-testid="controlled-radio"
            >
              <fieldset
                class="MuiFormControl-root makeStyles-radioWrapper-433"
              >
                <legend
                  class="MuiFormLabel-root makeStyles-controlledRadioLabel-490"
                  id="radio-label-preferredContactMethod"
                >
                  Preferred Contact Method
                </legend>
                <div
                  aria-labelledby="radio-label-preferredContactMethod"
                  class="MuiFormGroup-root MuiFormGroup-row"
                  data-testid="controlled-radio-group"
                  role="radiogroup"
                >
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-498 MuiRadio-root makeStyles-root-492 PrivateSwitchBase-checked-499 Mui-checked"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          checked=""
                          class="PrivateSwitchBase-input-501"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="0"
                        />
                        <span
                          class="makeStyles-icon-493 makeStyles-checkedIcon-496 "
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Email
                    </span>
                  </label>
                  <label
                    class="MuiFormControlLabel-root"
                  >
                    <span
                      aria-disabled="false"
                      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-498 MuiRadio-root makeStyles-root-492"
                    >
                      <span
                        class="MuiIconButton-label"
                      >
                        <input
                          class="PrivateSwitchBase-input-501"
                          data-testid="controlled-radio-button"
                          name="preferredContactMethod"
                          type="radio"
                          value="1"
                        />
                        <span
                          class="makeStyles-icon-493 makeStyles-unactiveIcon-495"
                        />
                      </span>
                    </span>
                    <span
                      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
                    >
                      Phone
                    </span>
                  </label>
                </div>
              </fieldset>
            </div>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-formButtonWrapper-381"
      >
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-discardButton-405 MuiButton-textPrimary Mui-disabled Mui-disabled"
            data-testid="discard-changes-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              Discard Changes
            </span>
          </button>
        </span>
        <span
          class=""
          data-testid="controlled-button"
          tabindex="-1"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained false makeStyles-nextButton-404 makeStyles-noPadding-401 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge Mui-disabled Mui-disabled"
            data-testid="confirm-btn"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label"
            >
              <span
                class="makeStyles-textWrapper-504"
              >
                Save Changes
              </span>
            </span>
          </button>
        </span>
      </div>
    </div>
  </div>
</body>
`;
